Fix z-index issues

--- a/app/assets/stylesheets/module/_menu.scss
+++ b/app/assets/stylesheets/module/_menu.scss
@@ -6,7 +6,7 @@
   background: rgba(0,0,0,0.090);
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: $zIndex-overlay;
   &--active {
     display: block;
   }
@@ -18,7 +18,7 @@
   overflow: scroll;
   top: 0;
   left: 0;
-  z-index: 200;
+  z-index: $zIndex-sidemenu;
   padding: 50px 48px;
   transform: translateX(-100%);
   transition: transform 375ms cubic-bezier(0.0, 0.0, 0.2, 1);
