--- a/app/assets/stylesheets/module/_sticky.scss
+++ b/app/assets/stylesheets/module/_sticky.scss
@@ -1,5 +1,5 @@
 .sticky-element {
-  z-index: $zIndex-50;
+  z-index: $zIndex-header;
   position: relative;
   &__wrapper {
     will-change: position;
